--- a/tpmlwebref_statistics.htm
+++ b/tpmlwebref_statistics.htm
@@ -582,11 +582,11 @@
                                     </div>
                                     <div class="table_wrapper">
                                         <table class="table_hover">
-                                            <caption>問題主題類別格式</caption>
+                                            <caption>三大分類格式</caption>
                                             <thead>
                                                 <tr>
                                                     <th class="text-center">序號<i class="i_sort"></i></a></th>
-                                                    <th class="text-center">問題主題類別</th>
+                                                    <th class="text-center">三大分類類別</th>
                                                     <!--th>預約案號</th>
                                                     <th>虛擬主機(編號)</th-->
                                                     <th class="text-center">次數</th>
@@ -595,42 +595,21 @@
                                             <tbody>
                                                 <tr>
                                                     <td class="num" style="text-align: center;">1</td>
-                                                    <td style="text-align: center;">全部</td>
-                                                    <!--td>1110101001</td>
-                                                    <td style="text-align: center;">1</td-->
-                                                    <td style="text-align: center;">333</td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="num" style="text-align: center;">2</td>
-                                                    <td style="text-align: center;">自然科學</td>
+                                                    <td style="text-align: center;">常見問題</td>
                                                     <!--td>1110101001</td>
                                                     <td style="text-align: center;">1</td-->
                                                     <td style="text-align: center;">1234</td>
                                                 </tr>
                                                 <tr>
-                                                    <td class="num" style="text-align: center;">3</td>
-                                                    <td style="text-align: center;">其他</td>
+                                                    <td class="num" style="text-align: center;">2</td>
+                                                    <td style="text-align: center;">館務</td>
                                                     <!--td>1110101001</td>
                                                     <td style="text-align: center;">1</td-->
                                                     <td style="text-align: center;">110</td>
                                                 </tr>
                                                 <tr>
-                                                    <td class="num" style="text-align: center;">4</td>
-                                                    <td style="text-align: center;">台北市立圖書館相關</td>
-                                                    <!--td>1110101001</td>
-                                                    <td style="text-align: center;">1</td-->
-                                                    <td style="text-align: center;">1112</td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="num" style="text-align: center;">5</td>
-                                                    <td style="text-align: center;">應用科學</td>
-                                                    <!--td>1110101001</td>
-                                                    <td style="text-align: center;">1</td-->
-                                                    <td style="text-align: center;">1112</td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="num" style="text-align: center;">6</td>
-                                                    <td style="text-align: center;">總類</td>
+                                                    <td class="num" style="text-align: center;">3</td>
+                                                    <td style="text-align: center;">知識性</td>
                                                     <!--td>1110101001</td>
                                                     <td style="text-align: center;">1</td-->
                                                     <td style="text-align: center;">1112</td>
