--- a/tpmlwebref_questionsearchnew.htm
+++ b/tpmlwebref_questionsearchnew.htm
@@ -242,6 +242,7 @@
                                                                 <option value="2">公版回覆2</option>
                                                                 <option value="3">公版回覆3</option>
                                                                 <option value="4">公版回覆4</option>
+                                                                <option value="4">公版回覆5</option>
                                                             </select>
                                                             <label>公版回覆</label>
                                                         </div>
