--- a/tpmlwebref_statistics.htm
+++ b/tpmlwebref_statistics.htm
@@ -170,9 +170,11 @@
                                                             <option value="6">回覆館別</option>
                                                             <option value="7">參考服務問題形式</option>
                                                             <option value="8">問題主題類別</option>
-                                                            <option value="9">問題回覆方式</option>
-                                                            <option value="10">讀者類型</option>
-                                                            <option value="11">回覆資料類型</option>
+                                                            <option value="9">三大分類</option>
+                                                            <option value="10">問題回覆方式
+                                                            </option>
+                                                            <option value="11">讀者類型</option>
+                                                            <option value="12">回覆資料類型</option>
                                                         </select>
                                                         <label>功能選項</label>
                                                     </div>
@@ -582,11 +584,62 @@
                                     </div>
                                     <div class="table_wrapper">
                                         <table class="table_hover">
+                                            <caption>問題主題類別格式</caption>
+                                            <thead>
+                                                <tr>
+                                                    <th class="text-center">序號<i class="i_sort"></i></a></th>
+                                                    <th class="text-center">三大分類</th>
+                                                    <!--th>預約案號</th>
+                                                    <th>虛擬主機(編號)</th-->
+                                                    <th class="text-center">次數</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td class="num" style="text-align: center;">1</td>
+                                                    <td style="text-align: center;">自然科學</td>
+                                                    <!--td>1110101001</td>
+                                                    <td style="text-align: center;">1</td-->
+                                                    <td style="text-align: center;">1234</td>
+                                                </tr>
+                                                <tr>
+                                                    <td class="num" style="text-align: center;">2</td>
+                                                    <td style="text-align: center;">其他</td>
+                                                    <!--td>1110101001</td>
+                                                    <td style="text-align: center;">1</td-->
+                                                    <td style="text-align: center;">110</td>
+                                                </tr>
+                                                <tr>
+                                                    <td class="num" style="text-align: center;">3</td>
+                                                    <td style="text-align: center;">台北市立圖書館相關</td>
+                                                    <!--td>1110101001</td>
+                                                    <td style="text-align: center;">1</td-->
+                                                    <td style="text-align: center;">1112</td>
+                                                </tr>
+                                                <tr>
+                                                    <td class="num" style="text-align: center;">4</td>
+                                                    <td style="text-align: center;">應用科學</td>
+                                                    <!--td>1110101001</td>
+                                                    <td style="text-align: center;">1</td-->
+                                                    <td style="text-align: center;">1112</td>
+                                                </tr>
+                                                <tr>
+                                                    <td class="num" style="text-align: center;">5</td>
+                                                    <td style="text-align: center;">總類</td>
+                                                    <!--td>1110101001</td>
+                                                    <td style="text-align: center;">1</td-->
+                                                    <td style="text-align: center;">1112</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                    <div class="table_wrapper">
+                                        <table class="table_hover">
                                             <caption>三大分類格式</caption>
                                             <thead>
                                                 <tr>
                                                     <th class="text-center">序號<i class="i_sort"></i></a></th>
-                                                    <th class="text-center">三大分類類別</th>
+                                                    <th class="text-center">三大分類</th>
                                                     <!--th>預約案號</th>
                                                     <th>虛擬主機(編號)</th-->
                                                     <th class="text-center">次數</th>
