--- a/tpmlwebref_questionsearch.htm
+++ b/tpmlwebref_questionsearch.htm
@@ -327,8 +327,8 @@
                                                 <th><a href="#">文件編號<i class="i_sort"></i></a></th>
                                                 </th>
                                                 <th><a href="#">提問時間<i class="i_sort"></i></a></th>
-                                                <th class="text-center">讀者問題描述</th>
-                                                <th class="text-center">問題主題類別</th>
+                                                <th class="text-center">讀者問題</th>
+                                                <th class="text-center">主題類別</th>
                                                 <th class="text-left">處理方式/結果</a>
                                                 </th>
                                                 <th>處理階段</th>
