--- a/tpmlwebref_questionsearchnew.htm
+++ b/tpmlwebref_questionsearchnew.htm
@@ -198,7 +198,7 @@
                                                             <label>問題處理階段</label>
                                                         </div>
                                                         <div class="labelEffect">
-                                                            <input name="" type="text" value="2天2小時33分" disabled
+                                                            <input name="" type="text" value="已超過2天2小時33分" disabled
                                                                 style="color: red;">
                                                             <label>回覆期限</label>
                                                         </div>
