--- a/tpmlwebref_questionsearchnew.htm
+++ b/tpmlwebref_questionsearchnew.htm
@@ -200,7 +200,7 @@
                                                         <div class="labelEffect">
                                                             <input name="" type="text" value="已超過2天2小時33分" disabled
                                                                 style="color: red;">
-                                                            <label>回覆時間(回覆期限)</label>
+                                                            <label>回覆日期/期限</label>
                                                         </div>
                                                     </div>
                                                     <div class="form_grp" style="margin-bottom:50px;">
