--- a/tpmlwebref_questionsearchnew.htm
+++ b/tpmlwebref_questionsearchnew.htm
@@ -179,7 +179,7 @@
                                                             <label>序號</label>
                                                         </div>
                                                         <div class="labelEffect">
-                                                            <input name="" type="text" value="2024/5/13下午18:09"
+                                                            <input name="" type="text" value="2024-05-13下午18:09"
                                                                 disabled>
                                                             <label>提問時間</label>
                                                         </div>
